<resources>
    <string name="app_name">BanayBanay Cleaning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_residents">Residents</string>
    <string name="menu_areas">Areas</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_reports">Reports</string>
    <string name="home_title">Barangay BanayBanay</string>
    <string name="lorem_ipsum">“Once there was a rich lady with many maids. She kept her maids with good food, clothing and light labor. However, each one had a definite task to perform every day. She had one laundrywoman, one seamstress, one cook, one waiter, one housekeeper and three gardeners. “This mistress of the house was very much inclined to make her garden very strong and attractive. During that time, wire and iron fences were unknown. Most of the fences were made of bamboo and stone walls. All these kinds of fences did not suit the taste of this lady. She said, ‘I shall marry the man who could make the fence of my garden suit my taste, however if he fails his head would be cut off.’ No one dared try the task for fear of losing his head. Therefore, the maids gave their suggestion as to the kind of fence which they thought would best suit their mistress’ desire. One maid suggested the aroma trees for fencing, the other suggested the murado plants and the last suggested banaybanay or papuwa as we call it today. The fence made of banaybanay plants suited the lady’s desire so the gardeners planted them around the garden. They trimmed them often as they could so the garden appeared very attractive. The neighbors saw this garden with banaybanay as its hedges. They planted them also as hedges in their gardens. Finally, all the people of the village had banaybanay as hedges of their flower gardens. So the whole barrio was given the name Banaybanay because of the uniformity of the hedges of the people’s gardens.” </string>

    <string-array name="areas_status">
        <item>all</item>
        <item>clean</item>
        <item>unclean</item>
    </string-array>

    <string-array name="reports_status">
        <item>all</item>
        <item>resolved</item>
        <item>unresolved</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>