<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_residents"
            android:icon="@drawable/ic_menu_residents"
            android:title="@string/menu_residents" />
        <item
            android:id="@+id/nav_areas"
            android:icon="@drawable/ic_menu_areas"
            android:title="@string/menu_areas" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_reports"
            android:title="@string/menu_reports" />
    </group>
</menu>